# ProtocoloIot

./: README.md  prueba.depend  prueba.layout
IoTProtocol/: CMakeLists.txt
IoTProtocol/include/: IoTProtocol.h
IoTProtocol/src/: IoTProtocol.cpp  main.cpp
